[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/UI/opening_screens.gd" type="Script" id=1]
[ext_resource path="res://resources/art/opening_screens/help_dev_and_everything_will_come_together (orange).png" type="Texture" id=2]
[ext_resource path="res://resources/art/opening_screens/NFTStab_noir.png" type="Texture" id=3]
[ext_resource path="res://resources/ui_themes/main_menu.tres" type="Theme" id=4]
[ext_resource path="res://resources/art/opening_screens/loadscreen_1_godot.png" type="Texture" id=5]
[ext_resource path="res://resources/art/opening_screens/gpl_artboard_1.png" type="Texture" id=6]

[node name="OpeningScreens" type="Control"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
theme = ExtResource( 4 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Help" type="TextureButton" parent="MarginContainer"]
margin_right = 1536.0
margin_bottom = 864.0
rect_min_size = Vector2( 1024, 600 )
texture_normal = ExtResource( 2 )
expand = true

[node name="Winners" type="TextureButton" parent="MarginContainer"]
margin_right = 1536.0
margin_bottom = 864.0
rect_min_size = Vector2( 1024, 600 )
texture_normal = ExtResource( 3 )
expand = true

[node name="GPL" type="TextureButton" parent="MarginContainer"]
margin_right = 1536.0
margin_bottom = 864.0
rect_min_size = Vector2( 1024, 600 )
texture_normal = ExtResource( 6 )
expand = true

[node name="MadeWithGodot" type="TextureButton" parent="MarginContainer"]
margin_right = 1536.0
margin_bottom = 864.0
rect_min_size = Vector2( 1024, 600 )
texture_normal = ExtResource( 5 )
expand = true

[node name="Timer" type="Timer" parent="."]
wait_time = 5.95

[node name="PreMusicTimer" type="Timer" parent="."]
wait_time = 0.07
one_shot = true
autostart = true

[connection signal="pressed" from="MarginContainer/Help" to="." method="_on_Help_pressed"]
[connection signal="pressed" from="MarginContainer/Winners" to="." method="_on_Winners_pressed"]
[connection signal="pressed" from="MarginContainer/GPL" to="." method="_on_GPL_pressed"]
[connection signal="pressed" from="MarginContainer/MadeWithGodot" to="." method="_on_MadeWithGodot_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="PreMusicTimer" to="." method="_on_PreMusicTimer_timeout"]
